@@ -1,6 +1,7 @@
 ??/??/2012 autofs-5.0.8
 =======================
 - fix nobind sun escaped map entries.
+- fix use cache entry after free in lookup_prune_one_cache().
 
 25/07/2012 autofs-5.0.7
 =======================
